data/derived/sp14/progs/unify/prog4105.ml.out
Characters 110-122:
  let seen' = if List.mem (h) then h in
                 ^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
